--- a/clusters/test1/infr-apps/certmanager.yaml
+++ b/clusters/test1/infr-apps/certmanager.yaml
@@ -35,6 +35,12 @@ spec:
                 path: /roleRef/name
                 value: argocd-manager-certmanager
           - target:
+              kind: CronJob
+            patch: |-
+              - op: replace
+                path: /metadata/name
+                value: argocd-manager-certmanager-cleanup-cron
+          - target:
               kind: Job
             patch: |-
               - op: replace
