--- a/clusters/test1/infr-apps/certmanager.yaml
+++ b/clusters/test1/infr-apps/certmanager.yaml
@@ -65,3 +65,5 @@ spec:
         releaseName: k8s-spb2-backend1-certmanager
         values: |
           installCRDs: true
+          startupapicheck:
+           enabled: false
