--- a/clusters/test1/custom-resource/cleanup-cronjob.yaml
+++ b/clusters/test1/custom-resource/cleanup-cronjob.yaml
@@ -48,11 +48,12 @@ spec:
 
                   if [ ${age_min} -ge ${AGE_THRESHOLD_MIN} ]; then
                     kubectl get clusterrole "${role_name}" >/dev/null 2>&1 && \
-                      kubectl patch clusterrole "${role_name}" --type=merge -p '{"rules": []}' || true
-                    kubectl delete clusterrolebinding "${crb_name}" --ignore-not-found=true || true
+                      timeout 30 kubectl patch clusterrole "${role_name}" --type=merge -p '{"rules": []}' || true
+                    
+                    timeout 30 kubectl delete clusterrolebinding "${crb_name}" --ignore-not-found=true --force --grace-period=0 || true
                   fi
                 done
 
-                kubectl delete pod -n kube-system -l app.kubernetes.io/part-of=argo-jit-rbac --field-selector=status.phase=Succeeded --ignore-not-found=true || true
-                kubectl delete pod -n kube-system -l app.kubernetes.io/part-of=argo-jit-rbac-cron --field-selector=status.phase=Succeeded --ignore-not-found=true || true
+                timeout 30 kubectl delete pod -n kube-system -l app.kubernetes.io/part-of=argo-jit-rbac --field-selector=status.phase=Succeeded --ignore-not-found=true --force --grace-period=0 || true
+                timeout 30 kubectl delete pod -n kube-system -l app.kubernetes.io/part-of=argo-jit-rbac-cron --field-selector=status.phase=Succeeded --ignore-not-found=true --force --grace-period=0 || true
                 echo "Completed at $(date -u +%FT%TZ)"
