--- a/clusters/test1/infr-apps/fluent-bit.yaml
+++ b/clusters/test1/infr-apps/fluent-bit.yaml
@@ -53,7 +53,9 @@ spec:
                 value: k8s-spb2-backend1-fluent-bit-cleanup
     - repoURL: 'https://github.com/nomad-mrkn/zargocd.git'
       targetRevision: HEAD
-      path: shared/jit-rbac-roles/fluent-bit-patch.yaml
+      path: shared/jit-rbac-roles
+      directory:
+        include: fluent-bit-role.yaml
     - repoURL: 'https://github.com/nomad-mrkn/charts.git'
       targetRevision: HEAD
       path: fluent-bit
