--- a/clusters/test1/infr-apps/keda.yaml
+++ b/clusters/test1/infr-apps/keda.yaml
@@ -8,6 +8,7 @@ metadata:
 spec:
   syncPolicy:
     syncOptions:
+    - CreateNamespace=true
     - FailOnSharedResource=true
     - ServerSideApply=true
     automated:
