--- a/clusters/test1/infr-apps/keda.yaml
+++ b/clusters/test1/infr-apps/keda.yaml
@@ -63,6 +63,7 @@ spec:
       targetRevision: 2.16.1
       helm:
         releaseName: k8s-spb2-backend1-keda
+        insecureSkipTLSVerify: true
         valuesObject:
           #values.yaml
           image:
