--- a/shared/jit-rbac-roles/keda-role.yaml
+++ b/shared/jit-rbac-roles/keda-role.yaml
@@ -12,3 +12,6 @@ rules:
   - apiGroups: ["apiextensions.k8s.io"]
     resources: ["customresourcedefinitions"]
     verbs: ["create", "update", "patch", "get", "list", "watch"]
+  - apiGroups: [""]
+    resources: ["namespaces"]
+    verbs: ["create", "get", "list", "watch"]
