--- a/shared/jit-rbac-roles/keda-role.yaml
+++ b/shared/jit-rbac-roles/keda-role.yaml
@@ -14,4 +14,4 @@ rules:
     verbs: ["create", "update", "patch", "get", "list", "watch"]
   - apiGroups: [""]
     resources: ["namespaces"]
-    verbs: ["create", "get", "list", "watch"]
+    verbs: ["create", "get", "list", "watch", "update", "patch"]
