--- a/clusters/test1/infr-apps/jaeger.yaml
+++ b/clusters/test1/infr-apps/jaeger.yaml
@@ -61,92 +61,92 @@ spec:
       targetRevision: 0.73.1
       helm:
         releaseName: k8s-spb2-backend1-jaeger
-        values: |
+        valuesObject:
           jaeger:
             strategy: production
-                allInOne:
-                  options: # <3>
-                    log-level: debug # <4>
-                ingress:
-                  enabled: false
-                agent:
-                  resources:
-                    limits:
-                     cpu: 2000m
-                     memory: 1024Mi
-                    requests:
-                     cpu: 200m
-                     memory: 128Mi
-                  sidecarSecurityContext:
-                    allowPrivilegeEscalation: false
-                    capabilities:
-                      drop:
-                        - ALL
-                    runAsNonRoot: true
-                    runAsUser: 1001
-                    runAsGroup: 1001
-                    seccompProfile:
-                      type: RuntimeDefault
-                  image: ghcr.io/jaegertracing/jaeger-agent:1.49.0
-                query:
-                  resources:
-                    requests:
-                     cpu: 100m
-                     memory: 128Mi
-                    limits:
-                      cpu: 2000m
-                      memory: 512Mi
-                  image: ghcr.io/jaegertracing/jaeger-query:1.49.0
-                  tolerations:
-                  - key: "node-role.kubernetes.io/infr"
-                    operator: "Exists"
-                    effect: "NoSchedule"
-                  affinity:
-                    nodeAffinity:
-                      preferredDuringSchedulingIgnoredDuringExecution:
-                        - weight: 1
-                          preference:
-                            matchExpressions:
-                            - key: "node-role.kubernetes.io/infr"
-                              operator: "Exists"
+            allInOne:
+              options:
+                log-level: debug
+            ingress:
+              enabled: false
+            agent:
+              resources:
+                limits:
+                  cpu: 2000m
+                  memory: 1024Mi
+                requests:
+                  cpu: 200m
+                  memory: 128Mi
+              sidecarSecurityContext:
+                allowPrivilegeEscalation: false
+                capabilities:
+                  drop:
+                    - ALL
+                runAsNonRoot: true
+                runAsUser: 1001
+                runAsGroup: 1001
+                seccompProfile:
+                  type: RuntimeDefault
+              image: ghcr.io/jaegertracing/jaeger-agent:1.49.0
+            query:
+              resources:
+                requests:
+                  cpu: 100m
+                  memory: 128Mi
+                limits:
+                  cpu: 2000m
+                  memory: 512Mi
+              image: ghcr.io/jaegertracing/jaeger-query:1.49.0
+              tolerations:
+                - key: "node-role.kubernetes.io/infr"
+                  operator: "Exists"
+                  effect: "NoSchedule"
+              affinity:
+                nodeAffinity:
+                  preferredDuringSchedulingIgnoredDuringExecution:
+                    - weight: 1
+                      preference:
+                        matchExpressions:
+                          - key: "node-role.kubernetes.io/infr"
+                            operator: "Exists"
+            collector:
+              minReplicas: 24
+              maxReplicas: 24
+              image: ghcr.io/jaegertracing/jaeger-collector:1.49.0
+              options:
                 collector:
-                  minReplicas: 24
-                  maxReplicas: 24
-                  image: ghcr.io/jaegertracing/jaeger-collector:1.49.0
-                  options:
-                    collector:
-                      num-workers: 2000
-                      queue-size: 50000
-                  resources:
-                    requests:
-                      cpu: 2000m
-                      memory: 1536Mi
-                    limits:
-                      cpu: 3000m
-                      memory: 2Gi
-                  tolerations:
-                  - key: "node-role.kubernetes.io/infr"
-                    operator: "Exists"
-                    effect: "NoSchedule"
-                  affinity:
-                    nodeAffinity:
-                      preferredDuringSchedulingIgnoredDuringExecution:
-                        - weight: 1
-                          preference:
-                            matchExpressions:
-                            - key: "node-role.kubernetes.io/infr"
-                              operator: "Exists"
-                storage:
-                  type: cassandra
-                  options:
-                    cassandra:
-                      servers: cassandra-jaeger1.spb.dc,cassandra-jaeger2.spb.dc,cassandra-jaeger3.spb.dc
-                      keyspace: jaeger_v1_ru_spb
-                  cassandraCreateSchema:
-                    enabled: false
-                  dependencies:
-                    enabled: false
-                  secretName: jaeger-secret
+                  num-workers: 2000
+                  queue-size: 50000
+              resources:
+                requests:
+                  cpu: 2000m
+                  memory: 1536Mi
+                limits:
+                  cpu: 3000m
+                  memory: 2Gi
+              tolerations:
+                - key: "node-role.kubernetes.io/infr"
+                  operator: "Exists"
+                  effect: "NoSchedule"
+              affinity:
+                nodeAffinity:
+                  preferredDuringSchedulingIgnoredDuringExecution:
+                    - weight: 1
+                      preference:
+                        matchExpressions:
+                          - key: "node-role.kubernetes.io/infr"
+                            operator: "Exists"
+            storage:
+              type: cassandra
+              options:
+                cassandra:
+                  servers: cassandra-jaeger1.spb.dc,cassandra-jaeger2.spb.dc,cassandra-jaeger3.spb.dc
+                  keyspace: jaeger_v1_ru_spb
+              cassandraCreateSchema:
+                enabled: false
+              dependencies:
+                enabled: false
+              secretName: jaeger-secret
           rbac:
             create: true
             pspEnabled: false
@@ -160,17 +160,17 @@ spec:
               memory: 256Mi
           nodeSelector: {}
           tolerations:
-          - key: "node-role.kubernetes.io/infr"
-            operator: "Exists"
-            effect: "NoSchedule"
+            - key: "node-role.kubernetes.io/infr"
+              operator: "Exists"
+              effect: "NoSchedule"
           affinity:
             nodeAffinity:
               preferredDuringSchedulingIgnoredDuringExecution:
                 - weight: 1
                   preference:
                     matchExpressions:
-                    - key: "node-role.kubernetes.io/infr"
-                      operator: "Exists"
+                      - key: "node-role.kubernetes.io/infr"
+                        operator: "Exists"
           vault:
             - name: jaeger-secret
               path: secret/internal/infrastructure/Cassandra/jaeger/prod
