--- a/shared/jit-rbac/post-hook.yaml
+++ b/shared/jit-rbac/post-hook.yaml
@@ -9,6 +9,7 @@ metadata:
     argocd.argoproj.io/sync-wave: "99"
   labels:
     app.kubernetes.io/part-of: argo-jit-rbac
+    jit-rbac/app: APP_NAME_PLACEHOLDER
 spec:
   backoffLimit: 0
   ttlSecondsAfterFinished: 60
@@ -16,6 +17,7 @@ spec:
     metadata:
       labels:
         app.kubernetes.io/part-of: argo-jit-rbac
+        jit-rbac/app: APP_NAME_PLACEHOLDER
     spec:
       serviceAccountName: argocd-manager
       restartPolicy: Never
