--- a/shared/jit-rbac/pre-hook-cron.yaml
+++ b/shared/jit-rbac/pre-hook-cron.yaml
@@ -9,12 +9,13 @@ metadata:
     argocd.argoproj.io/sync-wave: "-1"
   labels:
     app.kubernetes.io/part-of: argo-jit-rbac
+    jit-rbac/app: APP_NAME_PLACEHOLDER
 spec:
   schedule: "*/5 * * * *"
   successfulJobsHistoryLimit: 1
   failedJobsHistoryLimit: 1
   concurrencyPolicy: Forbid
-  suspend: true
+  suspend: false
   startingDeadlineSeconds: 0
   jobTemplate:
     spec:
@@ -24,6 +25,7 @@ spec:
         metadata:
           labels:
             app.kubernetes.io/part-of: argo-jit-rbac
+            jit-rbac/app: APP_NAME_PLACEHOLDER
         spec:
           serviceAccountName: argocd-manager
           restartPolicy: Never
