--- a/shared/jit-rbac/pre-hook-rbac.yaml
+++ b/shared/jit-rbac/pre-hook-rbac.yaml
@@ -8,6 +8,7 @@ metadata:
     argocd.argoproj.io/sync-wave: "-2"
   labels:
     app.kubernetes.io/part-of: argo-jit-rbac
+    jit-rbac/app: APP_NAME_PLACEHOLDER
 rules: []
 ---
 apiVersion: rbac.authorization.k8s.io/v1
@@ -20,6 +21,7 @@ metadata:
     argocd.argoproj.io/sync-wave: "-2"
   labels:
     app.kubernetes.io/part-of: argo-jit-rbac
+    jit-rbac/app: APP_NAME_PLACEHOLDER
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
