--- a/shared/jit-rbac/pre-hook-with-cron.yaml
+++ b/shared/jit-rbac/pre-hook-with-cron.yaml
@@ -1,3 +1,36 @@
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: ROLE_NAME_PLACEHOLDER
+  annotations:
+    argocd.argoproj.io/hook: PreSync
+    argocd.argoproj.io/hook-delete-policy: HookFailed
+    argocd.argoproj.io/sync-wave: "-1"
+  labels:
+    app.kubernetes.io/part-of: argo-jit-rbac
+    jit-rbac/app: APP_NAME_PLACEHOLDER
+rules: []
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: ROLE_NAME_PLACEHOLDER
+  annotations:
+    argocd.argoproj.io/hook: PreSync
+    argocd.argoproj.io/hook-delete-policy: HookFailed
+    argocd.argoproj.io/sync-wave: "-1"
+  labels:
+    app.kubernetes.io/part-of: argo-jit-rbac
+    jit-rbac/app: APP_NAME_PLACEHOLDER
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: ROLE_NAME_PLACEHOLDER
+subjects:
+  - kind: ServiceAccount
+    name: argocd-manager
+    namespace: kube-system
+---
 apiVersion: batch/v1
 kind: CronJob
 metadata:
@@ -15,8 +48,6 @@ spec:
   successfulJobsHistoryLimit: 1
   failedJobsHistoryLimit: 1
   concurrencyPolicy: Forbid
-  suspend: false
-  startingDeadlineSeconds: 0
   jobTemplate:
     spec:
       backoffLimit: 0
@@ -45,5 +76,3 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.labels['jit-rbac/app']
-
-
