--- a/clusters/test1/infr-apps/coredns.yaml
+++ b/clusters/test1/infr-apps/coredns.yaml
@@ -11,7 +11,7 @@ spec:
       prune: false
     syncOptions:
     - FailOnSharedResource=false
-  project: k8s-spb2-backend1
+  project: default
   destination:
     namespace: kube-system
     name: k8s-spb2-backend1
