--- a/clusters/test1/infr-apps/victoria-metrics-operator.yaml
+++ b/clusters/test1/infr-apps/victoria-metrics-operator.yaml
@@ -44,13 +44,13 @@ spec:
             patch: |-
               - op: replace
                 path: /metadata/name
-                value: k8s-spb2-backend1-victoria-metrics-operator-cleanup-cron
+                value: k8s-spb1-b1-vmo-cleanup-cron
           - target:
               kind: Job
             patch: |-
               - op: replace
                 path: /metadata/name
-                value: k8s-spb2-backend1-victoria-metrics-operator-cleanup
+                value: k8s-spb1-b1-vmo-cleanup
     - repoURL: 'https://github.com/nomad-mrkn/zargocd.git'
       targetRevision: HEAD
       path: shared/jit-rbac-roles
