--- a/clusters/test1/infr-apps/victoria-metrics-operator.yaml
+++ b/clusters/test1/infr-apps/victoria-metrics-operator.yaml
@@ -67,7 +67,7 @@ spec:
             tag: v0.41.1
           env:
             - name: VM_VMAGENTDEFAULT_CONFIGRELOADIMAGE
-              value: quay.io/prometheus-operator/prometheus-config-reloader:v0.68.0
+              value: ghcr.io/prometheus-operator/prometheus-config-reloader:v0.68.0
           vmagent:
             enabled: true
             remoteWrite:
