--- a/clusters/test1/infr-apps/x509.yaml
+++ b/clusters/test1/infr-apps/x509.yaml
@@ -8,7 +8,8 @@ metadata:
 spec:
   syncPolicy:
     syncOptions:
-    - FailOnSharedResource=true
+    - CreateNamespace=true
+    - FailOnSharedResource=false
     automated:
       prune: false
       selfHeal: false
