--- a/shared/jit-rbac-roles/vault-operator-role.yaml
+++ b/shared/jit-rbac-roles/vault-operator-role.yaml
@@ -1,38 +1,61 @@
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: vault-operator
-  labels:
-    app.kubernetes.io/part-of: argo-jit-rbac
-    jit-rbac/app: k8s-spb2-backend1-vault-operator
----
 apiVersion: rbac.authorization.k8s.io/v1
-kind: Role
+kind: ClusterRole
 metadata:
-  name: argocd-manager-vault-operator-secrets
-  namespace: vault-operator
+  name: argocd-manager-vault-operator
+  annotations:
+    argocd.argoproj.io/sync-wave: "0"
+    argocd.argoproj.io/sync-options: Prune=false
   labels:
     app.kubernetes.io/part-of: argo-jit-rbac
     jit-rbac/app: k8s-spb2-backend1-vault-operator
 rules:
-- apiGroups: [""]
-  resources: ["secrets"]
-  verbs: ["get","list","watch","create","update","patch","delete"]
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: RoleBinding
-metadata:
-  name: argocd-manager-vault-operator-secrets
-  namespace: vault-operator
-  labels:
-    app.kubernetes.io/part-of: argo-jit-rbac
-    jit-rbac/app: k8s-spb2-backend1-vault-operator
-subjects:
-- kind: ServiceAccount
-  name: argocd-manager
-  namespace: kube-system
-roleRef:
-  apiGroup: rbac.authorization.k8s.io
-  kind: Role
-  name: argocd-manager-vault-operator-secrets
-
+  - apiGroups: ["apps"]
+    resources:
+      - deployments
+      - replicasets
+    verbs: ["create", "update", "patch", "get", "list", "watch", "delete"]
+  
+  - apiGroups: [""]
+    resources:
+      - serviceaccounts
+      - services
+      - configmaps
+      - secrets
+      - pods
+      - pods/log
+      - events
+      - endpoints
+    verbs: ["create", "update", "patch", "get", "list", "watch", "delete"]
+  
+  - apiGroups: [""]
+    resources: ["namespaces"]
+    verbs: ["create", "get", "list", "watch"]
+  
+  - apiGroups: ["rbac.authorization.k8s.io"]
+    resources:
+      - clusterroles
+      - clusterrolebindings
+      - roles
+      - rolebindings
+    verbs: ["create", "update", "patch", "get", "list", "watch", "delete"]
+  
+  - apiGroups: ["ricoberger.de"]
+    resources:
+      - vaultsecrets
+    verbs: ["create", "update", "patch", "get", "list", "watch", "delete"]
+  
+  - apiGroups: ["monitoring.coreos.com"]
+    resources:
+      - servicemonitors
+      - podmonitors
+      - prometheusrules
+    verbs: ["create", "update", "patch", "get", "list", "watch", "delete"]
+  
+  - apiGroups: ["operator.victoriametrics.com"]
+    resources:
+      - vmservicescrapes
+    verbs: ["create", "update", "patch", "get", "list", "watch", "delete"]
+  
+  - apiGroups: ["batch"]
+    resources: ["jobs", "cronjobs"]
+    verbs: ["create", "delete", "list", "get", "watch", "update", "patch"]
