--- a/clusters/test1/infr-apps/vault-operator.yaml
+++ b/clusters/test1/infr-apps/vault-operator.yaml
@@ -10,6 +10,7 @@ spec:
     automated:
       prune: false
     syncOptions:
+    - CreateNamespace=true
     - FailOnSharedResource=false
   project: default
   destination:
