--- a/shared/jit-rbac-roles/vault-operator-role.yaml
+++ b/shared/jit-rbac-roles/vault-operator-role.yaml
@@ -38,6 +38,11 @@ rules:
       - roles
       - rolebindings
     verbs: ["create", "update", "patch", "get", "list", "watch", "delete"]
+
+  - apiGroups: ["apiextensions.k8s.io"]
+    resources:
+      - customresourcedefinitions
+    verbs: ["create", "update", "patch", "get", "list", "watch", "delete"]
   
   - apiGroups: ["ricoberger.de"]
     resources:
