--- a/shared/jit-rbac-roles/vault-operator-role.yaml
+++ b/shared/jit-rbac-roles/vault-operator-role.yaml
@@ -31,6 +31,11 @@ rules:
     resources: ["namespaces"]
     verbs: ["create", "get", "list", "watch"]
   
+  - apiGroups: ["coordination.k8s.io"]
+    resources:
+      - leases
+    verbs: ["create", "update", "patch", "get", "list", "watch", "delete"]
+  
   - apiGroups: ["rbac.authorization.k8s.io"]
     resources:
       - clusterroles
