--- a/shared/jit-rbac-roles/vault-operator-role.yaml
+++ b/shared/jit-rbac-roles/vault-operator-role.yaml
@@ -4,6 +4,8 @@ metadata:
   name: argocd-manager-vault-operator
   annotations:
     argocd.argoproj.io/sync-wave: "-1"
+    argocd.argoproj.io/hook: PreSync
+    argocd.argoproj.io/hook-delete-policy: BeforeHookCreation
     argocd.argoproj.io/sync-options: Prune=false
   labels:
     app.kubernetes.io/part-of: argo-jit-rbac
