--- a/shared/jit-rbac-roles/ingress-nginx-role.yaml
+++ b/shared/jit-rbac-roles/ingress-nginx-role.yaml
@@ -1,18 +1,17 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: argocd-manager-vault-operator
+  name: argocd-manager-ingress-nginx
   annotations:
-    argocd.argoproj.io/sync-wave: "-1"
-    argocd.argoproj.io/hook: PreSync
-    argocd.argoproj.io/hook-delete-policy: BeforeHookCreation
+    argocd.argoproj.io/sync-wave: "0"
     argocd.argoproj.io/sync-options: Prune=false
   labels:
     app.kubernetes.io/part-of: argo-jit-rbac
-    jit-rbac/app: k8s-spb2-backend1-vault-operator
+    jit-rbac/app: k8s-spb2-backend1-screenapi-nginx
 rules:
   - apiGroups: ["apps"]
     resources:
+      - daemonsets
       - deployments
       - replicasets
     verbs: ["create", "update", "patch", "get", "list", "watch", "delete"]
@@ -27,11 +26,24 @@ rules:
       - pods/log
       - events
       - endpoints
+      - namespaces
     verbs: ["create", "update", "patch", "get", "list", "watch", "delete"]
   
   - apiGroups: [""]
-    resources: ["namespaces"]
-    verbs: ["create", "get", "list", "watch"]
+    resources: ["nodes", "nodes/proxy"]
+    verbs: ["get", "list", "watch"]
+  
+  - apiGroups: ["networking.k8s.io"]
+    resources:
+      - ingressclasses
+      - ingresses
+      - ingresses/status
+    verbs: ["create", "update", "patch", "get", "list", "watch", "delete"]
+  
+  - apiGroups: ["discovery.k8s.io"]
+    resources:
+      - endpointslices
+    verbs: ["get", "list", "watch"]
   
   - apiGroups: ["coordination.k8s.io"]
     resources:
@@ -45,15 +57,28 @@ rules:
       - roles
       - rolebindings
     verbs: ["create", "update", "patch", "get", "list", "watch", "delete"]
-
-  - apiGroups: ["apiextensions.k8s.io"]
+  
+  - apiGroups: ["policy"]
     resources:
-      - customresourcedefinitions
+      - poddisruptionbudgets
+      - podsecuritypolicies
     verbs: ["create", "update", "patch", "get", "list", "watch", "delete"]
   
-  - apiGroups: ["ricoberger.de"]
+  - apiGroups: ["networking.k8s.io"]
     resources:
-      - vaultsecrets
+      - networkpolicies
+    verbs: ["create", "update", "patch", "get", "list", "watch", "delete"]
+  
+  - apiGroups: ["admissionregistration.k8s.io"]
+    resources:
+      - validatingwebhookconfigurations
+      - mutatingwebhookconfigurations
+    verbs: ["create", "update", "patch", "get", "list", "watch", "delete"]
+  
+  - apiGroups: ["autoscaling.k8s.io"]
+    resources:
+      - horizontalpodautoscalers
+      - verticalpodautoscalers
     verbs: ["create", "update", "patch", "get", "list", "watch", "delete"]
   
   - apiGroups: ["monitoring.coreos.com"]
@@ -63,11 +88,7 @@ rules:
       - prometheusrules
     verbs: ["create", "update", "patch", "get", "list", "watch", "delete"]
   
-  - apiGroups: ["operator.victoriametrics.com"]
-    resources:
-      - vmservicescrapes
-    verbs: ["create", "update", "patch", "get", "list", "watch", "delete"]
-  
   - apiGroups: ["batch"]
     resources: ["jobs", "cronjobs"]
-    verbs: ["create", "delete", "list", "get", "watch", "update", "patch"]
+    verbs: ["create", "delete", "list", "get", "watch", "update"]
+
