--- a/clusters/test1/infr-apps/policy-reporter.yaml
+++ b/clusters/test1/infr-apps/policy-reporter.yaml
@@ -67,7 +67,7 @@ spec:
           image:
             registry: ghcr.io
             repository: kyverno/policy-reporter
-            tag: 2.24.1
+            tag: v2.20.1
           logging:
             encoding: json
           monitoring:
