--- a/clusters/test1/custom-resource/cleanup-cronjob.yaml
+++ b/clusters/test1/custom-resource/cleanup-cronjob.yaml
@@ -47,12 +47,10 @@ spec:
                   age_min=$(( (now_epoch - crb_epoch) / 60 ))
 
                   if [ ${age_min} -ge ${AGE_THRESHOLD_MIN} ]; then
-                    RULES_VAL=$(kubectl get clusterrole "${role_name}" -o jsonpath='{.rules}' 2>/dev/null || echo "")
-                    if [ "${RULES_VAL}" = "[]" ] || [ -z "${RULES_VAL}" ]; then
-                      timeout 30 kubectl delete clusterrolebinding "${crb_name}" --ignore-not-found=true --force --grace-period=0 || true
-                    else
-                      continue
-                    fi
+                    # Если CRB висит более 15 минут - очищаем CR и удаляем CRB
+                    echo "CRB '${crb_name}' is ${age_min} minutes old, clearing CR '${role_name}' rules and deleting CRB"
+                    timeout 30 kubectl patch clusterrole "${role_name}" --type=merge -p '{"rules": []}' --ignore-not-found=true || true
+                    timeout 30 kubectl delete clusterrolebinding "${crb_name}" --ignore-not-found=true --force --grace-period=0 || true
                   fi
                 done
 
